--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "prep-er",
   "version": "0.1.0",
+  "homepage": "https://github.com/iShubhamTyagi",
   "private": true,
   "dependencies": {
     "@owaiswiz/use-in-view": "^1.0.16",
